Bug 469136: The font size is too small with the Classic skin (especially in bug comments) - Patch by FrÃ©dÃ©ric Buclin <LpSolit@gmail.com> r=pyrzak a=LpSolit

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -31,7 +31,11 @@
     body, td, th, input {
         font-family: Verdana, sans-serif;
         font-size: small;
-    }    
+    }
+    /* monospace is much smaller than Verdana by default, so we make it a bit bigger. */
+    pre, code, kbd {
+        font-size: medium;
+    }
 /* global (end) */
 
 /* header (begin) */
